# Make_MCP

./: README.md  docs.md  main.py  pyproject.toml
make_mcp/: __main__.py  core.py
